<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/fullscreen_setting_view_width"
    android:layout_height="wrap_content"
    android:background="@color/fullscreen_setting_view_background_color" >

    <RelativeLayout
        android:id="@+id/setting_view_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_view_title_height"
        android:layout_marginLeft="@dimen/setting_view_layout_marginleftright"
        android:layout_marginRight="@dimen/setting_view_layout_marginleftright" >

        <TextView
            android:id="@+id/setting_view_title"
            style="@style/setting_view_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/setting_view_title_marginleft"
            android:text="@string/settings" />

        <ImageView
            android:id="@+id/setting_view_close_btn"
            android:layout_width="@dimen/setting_view_close_btn_width"
            android:layout_height="@dimen/setting_view_close_btn_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/setting_view_close_btn" />
    </RelativeLayout>

    <View
        android:id="@+id/setting_view_title_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/setting_view_title_layout"
        android:layout_marginLeft="@dimen/setting_view_layout_marginleftright"
        android:layout_marginRight="@dimen/setting_view_layout_marginleftright"
        android:background="@color/setting_view_title_line_color" />

    <RelativeLayout
        android:id="@+id/setting_view_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_view_layout_height"
        android:layout_below="@id/setting_view_title_line" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_view_layout_marginleftright"
            android:layout_marginRight="@dimen/setting_view_layout_marginleftright"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/setting_view_layout_item_bright"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_view_layout_item_height"
                android:layout_marginLeft="@dimen/setting_view_layout_item_marginleftright"
                android:layout_marginRight="@dimen/setting_view_layout_item_marginleftright"
                android:gravity="left|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/setting_view_layout_item_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/setting_canvas_btn_spacing"
                    android:text="@string/setting_bright_tips" >
                </TextView>

                <SeekBar
                    android:id="@+id/setting_view_bright_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@drawable/player_setting_bright_progressbar"
                    android:thumb="@drawable/player_settings_bright_thumb" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_view_layout_item_canvas"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_view_layout_item_height"
                android:layout_marginLeft="@dimen/setting_view_layout_item_marginleftright"
                android:layout_marginRight="@dimen/setting_view_layout_item_marginleftright"
                android:gravity="left|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/setting_view_layout_item_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/setting_canvas_btn_spacing"
                    android:text="@string/setting_canvas_tips" >
                </TextView>

                <RadioGroup
                    android:id="@+id/setting_canvas_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:orientation="horizontal" >

                    <View
                        android:layout_width="@dimen/setting_canvas_btn_spacing"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/setting_canvas_50_btn"
                        style="@style/setting_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:button="@null"
                        android:drawableLeft="@drawable/player_setting_radiobtn_selector"
                        android:drawablePadding="@dimen/setting_radio_btn_drawablepadding"
                        android:gravity="left|center_vertical"
                        android:text="@string/setting_canvas_50" />

                    <View
                        android:layout_width="@dimen/setting_canvas_btn_spacing"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/setting_canvas_75_btn"
                        style="@style/setting_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:button="@null"
                        android:drawableLeft="@drawable/player_setting_radiobtn_selector"
                        android:drawablePadding="@dimen/setting_radio_btn_drawablepadding"
                        android:gravity="left|center_vertical"
                        android:text="@string/setting_canvas_75" />

                    <View
                        android:layout_width="@dimen/setting_canvas_btn_spacing"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/setting_canvas_100_btn"
                        style="@style/setting_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:button="@null"
                        android:drawableLeft="@drawable/player_setting_radiobtn_selector"
                        android:drawablePadding="@dimen/setting_radio_btn_drawablepadding"
                        android:gravity="left|center_vertical"
                        android:text="@string/setting_canvas_100" />

                    <View
                        android:layout_width="@dimen/setting_canvas_btn_spacing"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:id="@+id/setting_canvas_full_btn"
                        style="@style/setting_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:button="@null"
                        android:drawableLeft="@drawable/player_setting_radiobtn_selector"
                        android:drawablePadding="@dimen/setting_radio_btn_drawablepadding"
                        android:gravity="left|center_vertical"
                        android:text="@string/setting_canvas_full" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_view_layout_item_jump"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_view_layout_item_height"
                android:layout_marginLeft="@dimen/setting_view_layout_item_marginleftright"
                android:layout_marginRight="@dimen/setting_view_layout_item_marginleftright"
                android:gravity="left|center_vertical"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/setting_view_jump_chk"
                    style="@style/setting_view_layout_item_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/player_setting_checkbox_selector"
                    android:gravity="center"
                    android:text="@string/setting_view_jump_chk" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_view_title_line_color" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/setting_view_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_view_bottom_layout_height"
        android:layout_below="@id/setting_view_layout"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/setting_view_bottom_cancel_btn"
            style="@style/setting_view_bottom_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </TextView>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/setting_view_title_line_color" />

        <TextView
            android:id="@+id/setting_view_bottom_ok_btn"
            style="@style/setting_view_bottom_ok_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </TextView>
    </LinearLayout>

</RelativeLayout>